# hoopsearch

./: .env  .gitignore  Cargo.toml  README.md  build.rs  help.yml
docs/: design.md
examples/: client.py  n01_rocksdb.rs  n02_jieba.rs  n02_lmdb.rs
src/: main.rs
src/core/: database.rs
src/http/: data.rs  error.rs  mod.rs
src/http/routers/: indexes.rs  mod.rs  search.rs
src/parsing/: mod.rs
src/protos/: message.proto  message.rs
