[package]
name = "kdb"
version = "0.1.0"
authors = ["ztgx"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmdb-zero = "0.4.4"
grpcio = "0.4"
raft = "0.6.0-alpha"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"

[build-dependencies]
protoc-grpcio = "1.0.2"
