[package]
name = "hoopsearch"
version = "0.0.1"
authors = ["zTgx <beautifularea@163.com>"]
repository = "https://github.com/zTgx/hoopsearch.git"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
raft = "0.6.0-alpha"
rocksdb = "0.14.0"
clap = {version = "2.33", features = ["yaml"]}
log = "0.4.8"
env_logger = "0.7.1"

[build-dependencies]
